# studenti

./: LICENSE  README.md
privremeno/Arduino+senzori/: ProjektR.ino
privremeno/FreeRTOS+ESP32+EDF-scheduler/: CMakeLists.txt
privremeno/FreeRTOS+ESP32+EDF-scheduler/main/: main.c
privremeno/FreeRTOS+ESP32+ESP32S2+Arduino-IDE/: rezultati.txt
privremeno/FreeRTOS+ESP32+ESP32S2+Arduino-IDE/S1/: S1.ino
privremeno/FreeRTOS+ESP32+ESP32S2+Arduino-IDE/S2/: S2.ino
privremeno/FreeRTOS+ESP32+ESP32S2+ESP-IDF/testee/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
privremeno/FreeRTOS+ESP32+ESP32S2+ESP-IDF/testee/main/: main.c  (+1 more)
privremeno/FreeRTOS+ESP32+ESP32S2+ESP-IDF/tester/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
privremeno/FreeRTOS+ESP32+LCD/: CMakeLists.txt  README.md
privremeno/FreeRTOS+ESP32+LCD/main/: BarberShopProblem.c  CMakeLists.txt  DiningPhilosophers.c  LL_Helper.c  LL_Helper.h  main.c
privremeno/FreeRTOS+ESP32+kratko/: main.c
privremeno/thunder-detector/: .gitignore  CMakeLists.txt  README.md  sdkconfig
privremeno/thunder-detector/examples/: recorder.c
privremeno/thunder-detector/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
privremeno/thunder-detector/main/src/: AudioDetector.cpp  AudioDetector.h  Pins.hpp  SensorEvent.hpp  VisualDetector.cpp  VisualDetector.h
privremeno/thunder-detector/main/src/Devices/: Camera.cpp  Camera.h
privremeno/thunder-detector/main/src/Periph/: I2C.cpp  I2C.h  SD.cpp  SD.h
privremeno/thunder-detector/main/src/Util/: Queue.h  Threaded.cpp  Threaded.h  Timer.cpp  Timer.h
(+5 files in other folders)
